force-app/main/default/objects/Purecloud_Connector__c/Purecloud_Connector__c.object-meta.xml
<CustomObject>
    <label>Purecloud Master Presence</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purecloud Master Presence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>