force-app/main/default/objects/Purecloud_Connector__c/fields/AUX_Name__c.field-meta.xml
<CustomField>
    <fullName>AUX_Name__c</fullName>
    <label>AUX Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>