force-app/main/default/objects/Purecloud_Connector__c/fields/Presence_ID__c.field-meta.xml
<CustomField>
    <fullName>Presence_ID__c</fullName>
    <label>Presence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>