force-app/main/default/objects/Purecloud_Connector__c/fields/Primary_AUX_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_AUX_Name__c</fullName>
    <label>Primary AUX Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>