force-app/main/default/objects/Purecloud_Connector__c/fields/Primary_Presence__c.field-meta.xml
<CustomField>
    <fullName>Primary_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cek apakah status ini adalah primary atau custom</description>
    <label>Primary Presence</label>
    <type>Checkbox</type>
</CustomField>