force-app/main/default/objects/Purecloud_Connector__c/listViews/Token.listView-meta.xml
<ListView>
    <fullName>Token</fullName>
    <columns>NAME</columns>
    <columns>Access_Token__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Token</value>
    </filters>
    <label>Token</label>
    <language>en_US</language>
</ListView>